Quartz sync: Sep 9, 2024, 7:25 PM

--- a/content/Игры/Врата Бальдура/Хроники/День 10. В ожидании аудиенции.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 10. В ожидании аудиенции.md
@@ -11,8 +11,7 @@ fc-date:
   day: 10
 fc-display-name: В ожидании аудиенции
 location:
-  - "[[Поместье Рейвентри]]"
-  - План фей
+  - "[[Врата Бальдура]]"
 characters:
   - "[[Гайдо Алигьери]]"
   - "[[Ксандр]]"
@@ -25,12 +24,7 @@ characters:
 cssclasses:
   - dvl-c
 ---
-
-<!-- QueryToSerialize: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
-<!-- SerializedQuery: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
-- > *Предыдущая сессия*: *[[День 10.  Завершение миссий Сэдии]]*
-<!-- SerializedQuery END -->
----
+> Предыдущая сессия: [[День 10.  Завершение миссий Сэдии]]
 
 # Краткая сводка
 Врата 15 08 24 Часть 1
@@ -208,8 +202,12 @@ cssclasses:
 • Они обсуждают, какие смены работы приоритетны для каждого из них.
 
 
----
-<!-- QueryToSerialize: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
-<!-- SerializedQuery: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
-- > *Следующая сессия*: [[День 10. Стрекозы, покер и Чемпион]]
-<!-- SerializedQuery END -->
+
+
+```dataview
+LIST without ID "Следующая сессия: " + file.link
+From "Игры/Врата Бальдура/Хроники" 
+WHERE sessionNum > this.sessionNum
+SORT sessionNum asc
+Limit 1
+```
