--- a/content/Игры/Врата Бальдура/Хроники/День 4. Встреча с мистером Печенькой.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 4. Встреча с мистером Печенькой.md
@@ -24,18 +24,12 @@ characters:
 cssclasses: dvl-c
 ---
 
-<!-- QueryToSerialize: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
-<!-- SerializedQuery: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
-- > *Предыдущая сессия*: *[[content/Игры/Врата Бальдура/Хроники/День 3. Загадочная миска, Баал и суматоха.md|День 3. Загадочная миска, Баал и суматоха]]*
-<!-- SerializedQuery END -->
----
+>  Предыдущая сессия: [[День 3. Загадочная миска, Баал и суматоха]] 
+
 
 
 # Краткая сводка
 
 
 ---
-<!-- QueryToSerialize: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
-<!-- SerializedQuery: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
-- > *Следующая сессия*: [[День 4. Падение псевдо-капитана]]
-<!-- SerializedQuery END -->
+> Следующая сессия: [[День 4. Падение псевдо-капитана]] 
