--- a/content/Игры/Врата Бальдура/Хроники/День 5. Пиратская засада.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 5. Пиратская засада.md
@@ -25,11 +25,7 @@ characters:
 cssclasses: dvl-c
 ---
 
-<!-- QueryToSerialize: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
-<!-- SerializedQuery: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
-- > *Предыдущая сессия*: *[[День 4. Убийство дворфийки и уборщика]]*
-<!-- SerializedQuery END -->
----
+> Предыдущая сессия: [[День 4. Убийство дворфийки и уборщика]] 
 
 
 # Краткая сводка
@@ -42,4 +38,4 @@ cssclasses: dvl-c
 
 
 ---
-<!-- QueryToSerialize: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
+>Следующая сессия: [[День 5. Освобождение из камня]] 
