--- a/content/Игры/Врата Бальдура/Хроники/День 6. Материальный план и желания.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 6. Материальный план и желания.md
@@ -23,12 +23,7 @@ characters:
 cssclasses: dvl-c
 ---
 
-<!-- QueryToSerialize: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
-<!-- SerializedQuery: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
-- > *Предыдущая сессия*: *[[День 6. Банкетный зал и мозги]]*
-<!-- SerializedQuery END -->
-
----
+> Предыдущая сессия: [[День 6. Банкетный зал и мозги]] 
 
 
 # Краткая сводка
@@ -47,9 +42,5 @@ cssclasses: dvl-c
 
 После все, кроме Мирай, разошлись.
 
-
 ---
-<!-- QueryToSerialize: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
-<!-- SerializedQuery: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
-- > *Следующая сессия*: [[content/Игры/Врата Бальдура/Хроники/День 7. Корабль и возвращение к началу.md|День 7. Корабль и возвращение к началу]]
-<!-- SerializedQuery END -->
+>Следующая сессия: [[День 7. Корабль и возвращение к началу]] 
