--- a/content/Игры/Врата Бальдура/Хроники/День 7. Корабль и возвращение к началу.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 7. Корабль и возвращение к началу.md
@@ -12,7 +12,7 @@ fc-date:
 fc-display-name: Корабль и возвращение к началу
 location:
   - "[[Врата Бальдура]]"
-  - "[[Нижний город]]"
+  - "[[Нижний город |Нижний город]]"
   - Корабль "Аларика"
   - Порт
 characters:
@@ -27,12 +27,8 @@ cssclasses:
   - dvl-c
 ---
 
-<!-- QueryToSerialize: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
-<!-- SerializedQuery: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
-- > *Предыдущая сессия*: *[[День 6. Материальный план и желания]]*
-<!-- SerializedQuery END -->
+> Предыдущая сессия: [[День 6. Материальный план и желания]] 
 
----
 
 # Краткая сводка
 Проснувшись, большинство коротали время до прибытия. Тори изучала корабль с ног до головы, а позже знакомилась с местными матросами. Если уж корабль останется в нашем владении, то надо бы чтобы персонал был хороший. Матросами было обещано оплатить, что им было естественно в радость. Даже больше в радость, с учётом что прошлый капитан их перерезать планировал.
@@ -46,7 +42,4 @@ cssclasses:
 
 
 ---
-<!-- QueryToSerialize: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
-<!-- SerializedQuery: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
-- > *Следующая сессия*: [[content/Игры/Врата Бальдура/Хроники/День 7. Привычная обстановка.md|День 7. Привычная обстановка]]
-<!-- SerializedQuery END -->
+>Следующая сессия: [[День 7. Привычная обстановка]] 
