--- a/content/Игры/Врата Бальдура/Хроники/День 8. Дом с призраками.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 8. Дом с призраками.md
@@ -23,12 +23,7 @@ cssclasses:
   - dvl-c
 ---
 
-<!-- QueryToSerialize: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
-<!-- SerializedQuery: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
-- > *Предыдущая сессия*: *[[content/Игры/Врата Бальдура/Хроники/День 8. Сбор у Корана.md|День 8. Сбор у Корана]]*
-<!-- SerializedQuery END -->
-
----
+> Предыдущая сессия: [[День 8. Сбор у Корана]] 
 
 
 # Краткая сводка
@@ -81,9 +76,11 @@ cssclasses:
 
 Справа от входа в особняк мох
 
-<details> <summary><i>!Знает только Тори!</i></summary> <p>  <font color="#7f7f7f"> Картина, что осмотрела Тори: <i> "Сердце Рейвентри" </i> Таиды Редстоун <br><br>
-Таида Редстоун - художница, нарисовавшая большую часть картин в поместье<br><br>
-Дариус Корвинар 38 лет. Картина в в комнате справа от входа. Изначально в пару никто не верил, но оказались крепкой парой с Иланой. Прожили друг с другом 18 лет. "</font></p> </details>
+Знает Тори: 
+> На картине, что осмотрела Тори: "Сердце Рейвентри" Таиды Редстоун
+> 
+> Таида Редстоун - художница, нарисовавшая большую часть картин в поместье
+> Дариус Корвинар 38 лет. Картина в в комнате справа от входа. Изначально в пару никто не верил, но оказались крепкой парой с Иланой. Прожили друг с другом 18 лет. 
 
 Тори пытается выяснить имя ворона, но безуспешно. На тему знает ли ворон Дариуса, ворон ответил неуверенным нет. Перриуса тоже не знает. 
 
@@ -102,7 +99,4 @@ cssclasses:
 
 
 ---
-<!-- QueryToSerialize: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
-<!-- SerializedQuery: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
-- > *Следующая сессия*: [[content/Игры/Врата Бальдура/Хроники/День 8. Особняк на плане фей.md|День 8. Особняк на плане фей]]
-<!-- SerializedQuery END -->
+>Следующая сессия: [[День 8. Особняк на плане фей]] 
