--- a/content/Игры/Врата Бальдура/Хроники/День 8. Особняк на плане фей.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 8. Особняк на плане фей.md
@@ -24,24 +24,20 @@ cssclasses:
   - dvl-c
 ---
 
-<!-- QueryToSerialize: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
-<!-- SerializedQuery: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
-- > *Предыдущая сессия*: *[[День 8. Дом с призраками]]*
-<!-- SerializedQuery END -->
----
+> Предыдущая сессия: [[День 8. Дом с призраками]] 
 
 
 # Краткая сводка
 
-<details> <summary><i>Личная пометка</i></summary> <p> Мирай на этом плане слышит какофонию звуков природы, а видимость ограничена</p> </details>
+> Мирай на этом плане слышит какофонию звуков природы, а видимость ограничена
 
  Все грубо падают в светлую комнату. Гайдо элегантно опустился в кресло, и ему сразу подал вино гоблин. Перед нами черноволосый эльф [[Уск]].
  
 Гайдо сразу решил, что не особенно хочет задерживаться и болтать, так что отправился осматривать окрестности. Остальные решили узнать чуть больше о ситуации у Уска.
 
-Коротко: мы находимся в доме семьи Корвинаров, поместье Рейвентри. Это место - отражение настоящего поместья. Нас атаковали арканные духи, результат слияния необработанной магии с теневым планом. Леди [[Элсиет Корвинар]] находится с [[Кирнерос|чемпионом]].
- [[Дарриус Корвинар|Дарриуса]] здесь нет. Большинство гостей мертвы или застряли между планами, как призраки на материальном плане.
-В особняке сейчас находятся: Элсиет, Красная повариха (карга), [[Сэдия]]. Рекомендуется поговорить с последней. Есть еще спрайты, обладающие заметным весом. Карга и штат поваров находятся на кухне. Не рекомендуется заходить в восточное крыло. Тори предложила уйти из этого дома, но Мирай отказалась, замечая, что возвращение с плана Фей - настоящая лотерея.*
+Коротко: мы находимся в доме семьи Корвинаров, поместье Рейвентри. Это место - отражение настоящего поместья. Нас атаковали арканные духи, результат слияния необработанной магии с теневым планом. Леди [[Элсиет Колвинар]] находится с [[Кернерос|чемпионом]].
+ [[Дарриус Колвинар|Дарриуса]] здесь нет. Большинство гостей мертвы или застряли между планами, как призраки на материальном плане.
+В особняке сейчас находятся: Элсиет, Красная повариха , [[Сэдия]]. Рекомендуется поговорить с последней. Есть еще спрайты, обладающие заметным весом. Карга и штат поваров находятся на кухне. Не рекомендуется заходить в восточное крыло. Тори предложила уйти из этого дома, но Мирай отказалась, замечая, что возвращение с плана Фей - настоящая лотерея.*
 
 Так как Гайдо ещё в начале диалога ушёл, чтобы связаться с феями, он проследовал в соседнюю комнату с большим деревом. Но связаться не вышло, так что он просто решил потренироваться с мечом. Под конец диалога с Уском, к нему присоединилась Руб о и отдыхала рядом с ним, наблюдая.
 Тори ушла вместе с Уском, дойдя до библиотеки, где было пишущее дерево.
@@ -50,13 +46,10 @@ cssclasses:
 Позже Ксандр спрашивает, не она ли спасла Ксандра от смерти до захождения в портал, на что она ответила утвердительно, но добавила что ждёт от него того же в будущем.
 
 Уск начинает истаевать. 
-> *"Стоит встретиться с [[Элсиет Корвинар|Элсиет]]. Чтобы на нас тут обратили внимание, встретитесь с кем-то в особняке".* 
+> *"Стоит встретиться с [[Элсиет Колвинар|Элсиет]]. Чтобы на нас тут обратили внимание, встретитесь с кем-то в особняке".* 
 
 Ксандр и Мирай решают пойти на второй этаж, а Руб и Гайдо чуть ранее решили сходить на кухню и перекусить.
 
 
 ---
-<!-- QueryToSerialize: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
-<!-- SerializedQuery: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
-- > *Следующая сессия*: [[content/Игры/Врата Бальдура/Хроники/День 8. Сатиры, Повариха и Библиотека.md|День 8. Сатиры, Повариха и Библиотека]]
-<!-- SerializedQuery END -->
+>Следующая сессия: [[День 8. Сатиры, Повариха и Библиотека]] 
