--- a/content/Игры/Врата Бальдура/Хроники/День 8. Сатиры, Повариха и Библиотека.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 8. Сатиры, Повариха и Библиотека.md
@@ -26,18 +26,15 @@ cssclasses:
   - dvl-c
 ---
 
-<!-- QueryToSerialize: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
-<!-- SerializedQuery: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
-- > *Предыдущая сессия*: *[[content/Игры/Врата Бальдура/Хроники/День 8. Особняк на плане фей.md|День 8. Особняк на плане фей]]*
-<!-- SerializedQuery END -->
----
+> Предыдущая сессия: [[День 8. Особняк на плане фей]]
+
 
 # Краткая сводка
 
 ### Тори
 Тори подслушала диалог спрайтов:
 
-> "*Я не видела [[Элсиет Корвинар|Элсиет]] целую вечность, с тех пор как появилась эта леди Сильвания. Интересно, она вообще ещё здесь?*"
+> "*Я не видела [[Элсиет Колвинар|Элсиет]] целую вечность, с тех пор как появилась эта леди Сильвания. Интересно, она вообще ещё здесь?*"
 
 Мик, один из спрайтов, посоветовал поговорит с [[Вудфеллоу]]. 
 
@@ -79,11 +76,11 @@ cssclasses:
 
 Шифр у Тори не очень хорошо шёл, поэтому она переключилась на диалог гоблинов.
 
-> *Леди [[Элсиет Корвинар|Элсиет]] все ещё нужно найти, ведь она внутри дракона!*
+> *Леди [[Элсиет Колвинар|Элсиет]] все ещё нужно найти, ведь она внутри дракона!*
 
-Леди [[Элсиет Корвинар|Элсиет]] по их словам где-то потерялась, теперь всем заправляет [[Сэдия]]. Она хорошая. [[Сэдия]] знает детали исчезновения [[Элсиет Корвинар|Элсиет]].
+Леди [[Элсиет Колвинар|Элсиет]] по их словам где-то потерялась, теперь всем заправляет [[Сэдия]]. Она хорошая. [[Сэдия]] знает детали исчезновения [[Элсиет Колвинар|Элсиет]].
 
-[[Элсиет Корвинар|Элсиет]] и с нами и не с нами. Седия сейчас контролирует [[Элсиет Корвинар|Элсиет]], та сейчас немного не в себе. Видимо из-за старого проклятия.
+[[Элсиет Колвинар|Элсиет]] и с нами и не с нами. Седия сейчас контролирует [[Элсиет Колвинар|Элсиет]], та сейчас немного не в себе. Видимо из-за старого проклятия.
 Она направляется к [[Сэдия|Седии]].
 
 В коридоре по пути к [[Сэдия|Сэдии]], Руб встречает Тори. Судя по словам ветки, мясо было заражено грибами. Тори сразу дала команду принести воду и вливают.
@@ -99,8 +96,8 @@ cssclasses:
 Аргумент был принят и все побежали к [[Сэдия|Сэдии]].
 
 Мы наконец нагнали Тори. 
-[[Сэдия]], когда говорит о [[Элсиет Корвинар|Элсиет]], на её лице виднеется искреннее сожаление. Она не может нам пока помочь, всё же мы первые встречные. Поэтому предлагает выполнить пару её просьб.
-[[Сэдия]] надеется что [[Разгул]] не доберётся до [[Элсиет Корвинар|Элсиет]] . Разгул это скорее всего дух.
+[[Сэдия]], когда говорит о [[Элсиет Колвинар|Элсиет]], на её лице виднеется искреннее сожаление. Она не может нам пока помочь, всё же мы первые встречные. Поэтому предлагает выполнить пару её просьб.
+[[Сэдия]] надеется что [[Разгул]] не доберётся до [[Элсиет Колвинар|Элсиет]] . Разгул это скорее всего дух.
 
 На неуверенное замечании о течении времени, [[Сэдия]] утверждает что версии особняка закреплены "якорем". Время идёт здесь примерно так же.
 
@@ -113,8 +110,4 @@ cssclasses:
 
 
 ---
-<!-- QueryToSerialize: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
-<!-- SerializedQuery: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
-- > *Следующая сессия*: [[День 8. Ссора карги и русалки]]
-<!-- SerializedQuery END -->
-
+> Следующая сессия: [[День 8. Ссора карги и русалки]]
