--- a/content/Игры/Врата Бальдура/Хроники/День 8. Сбор у Корана.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 8. Сбор у Корана.md
@@ -13,8 +13,8 @@ fc-display-name: Сбор у Корана
 location:
   - "[[Врата Бальдура]]"
   - "[[Верхний город]]"
-  - "[[Внешний город]]"
-  - "[[Нижний город]]"
+  - "[[Внешний город |Внешний город]]"
+  - "[[Нижний город |Нижний город]]"
   - Дом Дамара и Руб
   - Усадьба Корана
   - Поместье Стелмейн
@@ -35,12 +35,7 @@ cssclasses:
   - dvl-c
 ---
 
-<!-- QueryToSerialize: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
-<!-- SerializedQuery: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
-- > *Предыдущая сессия*: *[[content/Игры/Врата Бальдура/Хроники/День 7. Привычная обстановка.md|День 7. Привычная обстановка]]*
-<!-- SerializedQuery END -->
-
----
+> Предыдущая сессия: [[День 7. Привычная обстановка]] 
 
 
 # Краткая сводка
@@ -54,7 +49,7 @@ cssclasses:
 Мирай много времени сборам не уделяла. Она лишь закончила некоторые вечерние дела, забрав походную сумку с вещами, книгу и отчёт. Обещав, что постарается вернуться вечером, она отправилась к Корану, где обнаружила спящего Гайдо в бассейне, а рядом наслаждающегося водичкой Джарлакса.
 
 #### Тори
-Тори встала ни свет ни заря (по своим стандартам), вызвав небольшой переполох среди служанок. Ещё и письмо пришло от одного известного [[Таламра Вантампур|рода]]. Быстро подумав над ответом, Тори передала служанке письмо, с ответным предложением: поприсутствовать на презентации её нового наряда.
+Тори встала ни свет ни заря , вызвав небольшой переполох среди служанок. Ещё и письмо пришло от одного известного [[Таламра Вантампур|рода]]. Быстро подумав над ответом, Тори передала служанке письмо, с ответным предложением: поприсутствовать на презентации её нового наряда.
 Проведя дежурный разговор с папонькой, решила и важным заняться. Дел на сегодня было запланировано достаточно, но вроде и торопиться особо некуда. 
 Еда для ветки уже была на месте. 4 самки и 2 знатных самца павлинов. Один самец сразу был переведён в ранг пищи. 
 Закончив с кормлением, Тори написала письмо своей подруге, назначая встречу на вечер в кофейне, а после поспешила из дома.
@@ -88,11 +83,8 @@ cssclasses:
 - Дом находятся на краю с Амном. В близлежащей деревне была найдена личинка [[Иллитиды|иллитидов]]
 - Вернуться можно и отдельно, но проще это будет сделать вместе
 - В любой момент можно закончить исследование дома, однако возвращение каждый обратно каждый раз будет становиться сложнее
-- Чтобы вернуться надо кристаллом нарисовать пентаграмму, что ранее рисовал Джарлакс (Мирай и Тори хорошо её запомнили)
+- Чтобы вернуться надо кристаллом нарисовать пентаграмму, что ранее рисовал Джарлакс 
 
 
 ---
-<!-- QueryToSerialize: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
-<!-- SerializedQuery: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
-- > *Следующая сессия*: [[День 8. Дом с призраками]]
-<!-- SerializedQuery END -->
+>Следующая сессия: [[День 8. Дом с призраками]] 
