--- a/content/Игры/Врата Бальдура/Хроники/День 10.  Завершение миссий Сэдии.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 10.  Завершение миссий Сэдии.md
@@ -26,11 +26,8 @@ cssclasses:
   - dvl-c
 ---
 
-<!-- QueryToSerialize: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
-<!-- SerializedQuery: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
-- > *Предыдущая сессия*: *[[content/Игры/Врата Бальдура/Хроники/День 10. Межпланарное зеркало.md|День 10. Межпланарное зеркало]]*
-<!-- SerializedQuery END -->
----
+> Предыдущая сессия: [[День 10. Межпланарное зеркало]]
+
 
 # Краткая сводка
 
@@ -94,9 +91,4 @@ cssclasses:
 ## Примечания
 Ксандр слишком много знает про особняк. Назвал Элсиет - сильварией, хотя раньше бы этого не понял и не вникал.
 
-
----
-<!-- QueryToSerialize: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
-<!-- SerializedQuery: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
-- > *Следующая сессия*: [[content/Игры/Врата Бальдура/Хроники/День 10. В ожидании аудиенции.md|День 10. В ожидании аудиенции]]
-<!-- SerializedQuery END -->
+> Следующая сессия: [[День 10. В ожидании аудиенции]]
