--- a/content/Игры/Врата Бальдура/Хроники/День 4. Убийство дворфийки и уборщика.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 4. Убийство дворфийки и уборщика.md
@@ -23,11 +23,7 @@ cssclasses:
   - dvl-c
 ---
 
-<!-- QueryToSerialize: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
-<!-- SerializedQuery: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
-- > *Предыдущая сессия*: *[[День 4. Падение псевдо-капитана]]*
-<!-- SerializedQuery END -->
----
+> Предыдущая сессия: [[День 4. Падение псевдо-капитана]] 
 
 
 # Краткая сводка
@@ -48,7 +44,4 @@ cssclasses:
 
 
 ---
-<!-- QueryToSerialize: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
-<!-- SerializedQuery: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
-- > *Следующая сессия*: [[День 5. Пиратская засада]]
-<!-- SerializedQuery END -->
+>Следующая сессия: [[День 5. Пиратская засада]] 
