--- a/content/Игры/Врата Бальдура/Хроники/День 5. Заражение и новый дом.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 5. Заражение и новый дом.md
@@ -25,11 +25,7 @@ cssclasses:
   - dvl-c
 ---
 
-<!-- QueryToSerialize: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
-<!-- SerializedQuery: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
-- > *Предыдущая сессия*: *[[День 5. Освобождение из камня]]*
-<!-- SerializedQuery END -->
----
+> Предыдущая сессия: [[День 5. Освобождение из камня]] 
 
 
 # Краткая сводка
@@ -45,4 +41,4 @@ cssclasses:
 
 
 ---
-<!-- QueryToSerialize: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
+>Следующая сессия: [[День 5. Погоня и пустынный остров]] 
