--- a/content/Игры/Врата Бальдура/Хроники/День 5. Погоня и пустынный остров.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 5. Погоня и пустынный остров.md
@@ -23,12 +23,8 @@ cssclasses:
   - dvl-c
 ---
 
-<!-- QueryToSerialize: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
-<!-- SerializedQuery: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
-- > *Предыдущая сессия*: *[[День 5. Заражение и новый дом]]*
-<!-- SerializedQuery END -->
+> Предыдущая сессия: [[День 5. Заражение и новый дом]] 
 
----
 
 # Краткая сводка
 
@@ -43,10 +39,4 @@ cssclasses:
 
 
 ---
-<!-- QueryToSerialize: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
-<!-- SerializedQuery: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
-- > *Следующая сессия*: [[День 6. Банкетный зал и мозги]]
-<!-- SerializedQuery END -->
-
-
-
+>Следующая сессия: [[День 6. Банкетный зал и мозги]] 
