--- a/content/Игры/Врата Бальдура/Хроники/День 6. Банкетный зал и мозги.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 6. Банкетный зал и мозги.md
@@ -24,11 +24,7 @@ cssclasses:
   - dvl-c
 ---
 
-<!-- QueryToSerialize: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
-<!-- SerializedQuery: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
-- > *Предыдущая сессия*: *[[День 5. Погоня и пустынный остров]]*
-<!-- SerializedQuery END -->
----
+> Предыдущая сессия: [[День 5. Погоня и пустынный остров]] 
 
 
 # Краткая сводка
@@ -50,9 +46,4 @@ cssclasses:
 
 
 ---
-<!-- QueryToSerialize: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
-<!-- SerializedQuery: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
-- > *Следующая сессия*: [[День 6. Материальный план и желания]]
-<!-- SerializedQuery END -->
-
-
+>Следующая сессия: [[День 6. Материальный план и желания]] 
