--- a/content/Игры/Врата Бальдура/Хроники/День 8. 50 лет спустя.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 8. 50 лет спустя.md
@@ -13,7 +13,7 @@ fc-display-name: 50 лет спустя
 location:
   - "[[Поместье Рейвентри]]"
   - "[[Врата Бальдура]]"
-  - "[[Нижний город]]"
+  - "[[Нижний город |Нижний город]]"
   - План фей
   - Материальный план
 characters:
@@ -28,15 +28,21 @@ cssclasses:
   - dvl-c
 ---
 
-<!-- QueryToSerialize: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
-<!-- SerializedQuery: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
-- > *Предыдущая сессия*: *[[День 8. Новая фея и злость Поварихи]]*
-<!-- SerializedQuery END -->
+> Предыдущая сессия: [[День 8. Новая фея и злость Поварихи]] 
 
----
 
 # Краткая сводка
-Обсудив ситуацию с сатирами, судям по всему лучшее решенее -  всё же поджечь комнату. Или же использовать снотворное. Но это всё задачи для Тори. 
+---
+## Подлежит редактуре
+
+
+Разговор о проблемах
+Герои обсуждают проблемы, связанные с отравлением и сатира.
+Гайда предлагает поджечь комнату, чтобы избавиться от сатиров.
+
+Решение проблем
+Герои обсуждают возможность поджога комнаты и использования снотворного для сатиров.
+Гайда предлагает обратиться к мисс Стори за помощью.
 
 Встреча с Сильване
 Герои встречаются с Сильване, которая предлагает помощь в решении проблем особняка.
@@ -164,14 +170,23 @@ cssclasses:
 • Герои проверяют память Александра, который помнит только часть своих снов.
 • Александр не помнит, что он делал с Руби.
 
-Все перемещаются в город, но обнаруживают, что они находятся всё ещё на плане Фей. Пытаясь всё же использовать книгу, все снова оказываются у особняка. К счастью, на материальном плане.
+14:52 Возвращение в город
 
-Конкретно задолбавшись, Тори высказывает [[Баал|кинжалу]], что хочет вернуться домой и сразу исчезает из поля зрения, перемещаясь во Врата.
-Гайдо закричал Джарлакс из всех сил.
+• Герои возвращаются в город через портал, но обнаруживают, что они находятся в другом мире.
+• Герои пытаются использовать книгу, чтобы вернуться в свой мир, но не могут вспомнить точную формулировку.
 
+20:22 Обсуждение гайда
 
----
-<!-- QueryToSerialize: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
-<!-- SerializedQuery: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
-- > *Следующая сессия*: [[День 9. Званный ужин у семьи Кляйн и снова в особняк]]
-<!-- SerializedQuery END -->
+• Леш и Гайда обсуждают, что они написали в гайде, и что они помнят из прошлого гайда.
+• Леш предлагает вернуться к началу гайда, где они обсуждали перемещение к Джарлаксу.
+
+24:17 Завершение игры
+
+• Леш и Тори обсуждают, что они хотят закончить игру, и что они хотят перенестись на материальный план.
+• Тори просит Леша перенести ее домой, и Леш использует кинжал, чтобы переместить ее.
+
+26:19 Завершение игры и обсуждение
+
+• Леш и Тори обсуждают, как они уйдут из игры, и Леш предлагает закончить на моменте орла.
+• Леш и Тори обсуждают, что они устали играть и хотят закончить игру.
+• Леш решает, что они закончат игру, и благодарит всех за участие.
