Quartz sync: Sep 9, 2024, 7:29 PM

--- a/content/Игры/Врата Бальдура/Хроники/День 8. Дом с призраками.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 8. Дом с призраками.md
@@ -30,13 +30,14 @@ cssclasses:
 
 Дом тихо открыл свои двери для новых гостей. Из-за того, что некоторые оставались поговорить с Джарлаксом ещё немного, зашли мы не вместе. Сначала залетели Гайдо с Ксандром, потом Тори, и только потом Мирай и Руб.
 
-*Прочитали **Мирай**, **Руб** и **Тори**:* Поместье Рейвентри.
+
+<details> <summary><i>Прочитали Мирай, Руб и Тори</i></summary> <p> Поместье Рейвентри.</p> </details>
 
 В главной зале лежит большая люстра, там же **Тори** нашла гостевую книгу.
 
 В комнате справа сидела призрачная фигура в смокинге с большой тростью. Мирай чувствовала лишь энергию, что исходит от неё.
 
-*Знают **Ксандр** и **Гайдо***. Сославшись на то, что плохо себя чувствуют после долгого путешествия с островов. Ну дворе сейчас 1462 год.
+<details> <summary><i>Знают Ксандр и Гайдо/i></summary> <p> Сославшись на то, что плохо себя чувствуют после долгого путешествия с островов. Ну дворе сейчас 1462 год.</p> </details>
 
 [[Перриус Аннматар|Перриус]] обиделся на Руб .
 
@@ -76,11 +77,9 @@ cssclasses:
 
 Справа от входа в особняк мох
 
-Знает Тори: 
-> На картине, что осмотрела Тори: "Сердце Рейвентри" Таиды Редстоун
-> 
-> Таида Редстоун - художница, нарисовавшая большую часть картин в поместье
-> Дариус Корвинар 38 лет. Картина в в комнате справа от входа. Изначально в пару никто не верил, но оказались крепкой парой с Иланой. Прожили друг с другом 18 лет. 
+<details> <summary><i>!Знает только Тори!</i></summary> <p>  <font color="#7f7f7f"> Картина, что осмотрела Тори: <i> "Сердце Рейвентри" </i> Таиды Редстоун <br><br>
+Таида Редстоун - художница, нарисовавшая большую часть картин в поместье<br><br>
+Дариус Корвинар 38 лет. Картина в в комнате справа от входа. Изначально в пару никто не верил, но оказались крепкой парой с Иланой. Прожили друг с другом 18 лет. "</font></p> </details>
 
 Тори пытается выяснить имя ворона, но безуспешно. На тему знает ли ворон Дариуса, ворон ответил неуверенным нет. Перриуса тоже не знает. 
 
