--- a/content/Игры/Врата Бальдура/Хроники/День 8. Особняк на плане фей.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 8. Особняк на плане фей.md
@@ -29,7 +29,7 @@ cssclasses:
 
 # Краткая сводка
 
-> Мирай на этом плане слышит какофонию звуков природы, а видимость ограничена
+<details> <summary><i>Личная пометка</i></summary> <p> Мирай на этом плане слышит какофонию звуков природы, а видимость ограничена</p> </details>
 
  Все грубо падают в светлую комнату. Гайдо элегантно опустился в кресло, и ему сразу подал вино гоблин. Перед нами черноволосый эльф [[Уск]].
  
