--- a/content/Игры/Врата Бальдура/Хроники/День 10. Стрекозы, покер и Чемпион.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 10. Стрекозы, покер и Чемпион.md
@@ -29,7 +29,7 @@ cssclasses:
 
 <!-- QueryToSerialize: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
 <!-- SerializedQuery: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
-- > *Предыдущая сессия*: *[[content/Игры/Врата Бальдура/Хроники/День 10. В ожидании аудиенции.md|День 10. В ожидании аудиенции]]*
+- > *Предыдущая сессия*: *[[День 10. В ожидании аудиенции]]*
 <!-- SerializedQuery END -->
 ---
 
