Quartz sync: Sep 9, 2024, 7:33 PM

--- a/content/Игры/Врата Бальдура/Хроники/День 10. Стрекозы, покер и Чемпион.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 10. Стрекозы, покер и Чемпион.md
@@ -27,10 +27,7 @@ cssclasses:
   - dvl-c
 ---
 
-<!-- QueryToSerialize: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
-<!-- SerializedQuery: LIST without ID "> *Предыдущая сессия*: *" + file.link + "*" From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum < this.sessionNum SORT sessionNum desc Limit 1 -->
-- > *Предыдущая сессия*: *[[День 10. В ожидании аудиенции]]*
-<!-- SerializedQuery END -->
+> *Предыдущая сессия*: *[[День 10. В ожидании аудиенции]]*
 ---
 
 
@@ -207,4 +204,3 @@ cssclasses:
 
 
 ---
-<!-- QueryToSerialize: LIST without ID "> *Следующая сессия*: " + file.link From "content/Игры/Врата Бальдура/Хроники" WHERE sessionNum > this.sessionNum SORT sessionNum asc Limit 1 -->
