Quartz sync: Sep 22, 2024, 2:36 AM

--- a/content/Действующие лица/Врата Бальдура/Персонажи Врат/Ксандр.md
+++ b/content/Действующие лица/Врата Бальдура/Персонажи Врат/Ксандр.md
@@ -34,3 +34,5 @@ dead: false
 
 
 Личность из Амна. До событий Хаммера 1483, пребывал в организации [[Легион Смерти]]. 
+
+По итогу не проиграл ни года жизни после игры в [[День 10. Покер и дом Поварихи|покер]].
