--- a/content/Действующие лица/Врата Бальдура/Персонажи Врат/Мирай Стелмейн.md
+++ b/content/Действующие лица/Врата Бальдура/Персонажи Врат/Мирай Стелмейн.md
@@ -31,3 +31,5 @@ dead: false
 > | Статус | Жив(а) |
 
 Дочь [[Белинн Стелмейн]]. В последние пару лет часто заменяла её. Не столь давно [[Смерть Мирай|умерла]] и теперь работает на [[Джарлакс|Джарлакса]].
+
++16 лет жизни после игры в [[День 10. Покер и дом Поварихи|покер]].
