--- a/content/Действующие лица/Врата Бальдура/Персонажи Врат/Руб.md
+++ b/content/Действующие лица/Врата Бальдура/Персонажи Врат/Руб.md
@@ -30,3 +30,5 @@ dead: false
 > | Статус | Жив(а) |
 
 Раньше работала на [[Мистер Печенька|Мистера Печеньку]], сейчас на [[Джарлакс|Джарлакса]].
+
++6 лет жизни после игры в [[День 10. Покер и дом Поварихи|покер]].
