--- a/content/Действующие лица/Врата Бальдура/Фессир.md
+++ b/content/Действующие лица/Врата Бальдура/Фессир.md
@@ -14,8 +14,10 @@ dead: false
 > 
 > ## Фессир
 > 
-> ### Описание
+> ![[Фессир.png]]
 > 
+> ### Описание
+>
 > | Тип | Персонаж |
 > | --- | --- |
 > | Другие имена| Нет данных |
